# SiliconGraph

./: .gitignore  CMakeLists.txt  README.md  implementation_plan.md  vcpkg.json
compiler/include/: armcc_sdk.h
compiler/include/analysis/: cost_model.h  graph_analyzer.h
compiler/include/arm_ir/: graph.h  node.h  ops.h  types.h
compiler/include/armcc/: version.h.in
compiler/include/generator/: graph_family_generator.h  graph_selector.h
compiler/include/memory/: memory_planner.h
compiler/include/package/: armpack_format.h  package_generator.h
compiler/include/passes/: pass_manager.h
compiler/include/runtime/: resource_controller.h
compiler/kernels/cpu/: flash_attention.h  matmul_neon.h
compiler/kernels/gpu/: opencl_kernels.h  vulkan_shaders.h
compiler/kernels/npu/: npu_delegates.h
compiler/lib/: CMakeLists.txt
compiler/lib/analysis/: cost_model.cpp  graph_analyzer.cpp
compiler/lib/arm_ir/: graph.cpp  ops.cpp  types.cpp
compiler/lib/generator/: condition_matrix.cpp  graph_family_generator.cpp  graph_selector.cpp
compiler/lib/memory/: kv_cache_layout.cpp  memory_planner.cpp  mmap_layout.cpp  tensor_allocator.cpp
compiler/lib/package/: manifest_writer.cpp  package_generator.cpp
compiler/lib/passes/: pass_manager.cpp
compiler/lib/passes/graph/: graph_passes.cpp  hardware_fusion.cpp
compiler/lib/passes/memory/: memory_passes.cpp
compiler/lib/passes/quantization/: quant_passes.cpp
compiler/lib/runtime/: resource_controller.cpp
compiler/tools/: CMakeLists.txt
compiler/tools/arm-ir-dump/: main.cpp
compiler/tools/armcc/: main.cpp
device_profiles/: apple_a18.json  apple_m4.json  dimensity_9300.json  exynos_2400.json  generic_arm64.json  snapdragon_8_elite.json  snapdragon_8_gen3.json
docs/: adding_a_target.md  arm_ir_spec.md  current_compilation_flow.md  device_aware_compilation_roadmap.md  kleidiai_integration.md  multimodal_support.md  package_format.md  react_native_mobile_runtime.md  silicongraph_implementation_plan.md
python/: pyproject.toml  requirements.txt
python/armcc/: __init__.py  calibration.py  cli.py  execution_policy.py  graph_exporter.py  hf_metadata.py  modalities.py  model_loader.py  model_reference.py
scripts/: compare_prompt_latency.py  run_prompt.py  test_armpack.py
silicongraph-desktop/: README.md  package-lock.json  package.json
silicongraph-desktop/electron/: adb.js  main.js  preload.js
silicongraph-desktop/src/: index.html  renderer.js  styles.css
silicongraph-desktop/test/: adb.test.js
silicongraph-mobile/: .gitignore  App.tsx  app.json  package-lock.json  package.json
silicongraph-mobile/android/: settings.gradle
silicongraph-mobile/android/app/: build.gradle
silicongraph-mobile/android/app/src/main/java/com/silicongraphmobile/: MainActivity.kt  MainApplication.kt
silicongraph-mobile/android/app/src/main/res/values/: strings.xml
silicongraph-mobile/ios/: Podfile
silicongraph-mobile/ios/SiliconGraphMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
silicongraph-mobile/ios/SiliconGraphMobile.xcodeproj/: project.pbxproj
silicongraph-mobile/ios/SiliconGraphMobile.xcodeproj/xcshareddata/xcschemes/: SiliconGraphMobile.xcscheme
tests/: CMakeLists.txt
tests/integration/: test_cli_handoff.py  test_smollm_pipeline.py
tests/unit/: test_cli_console_encoding.py  test_cost_model.cpp  test_execution_policy.py  test_graph_exporter.py  test_hf_metadata.py  test_ir_types.cpp  test_modalities.py  test_model_reference.py  test_pass_manager.cpp  test_resource_controller.cpp
