[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "armcc"
version = "0.1.0"
description = "ARM AI Compiler — Python Ingestion & Calibration Layer"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "safetensors>=0.4.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
armcc = "armcc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["armcc*"]

[tool.ruff]
line-length = 100
target-version = "py310"
